# LostAnimator

./: .gitignore  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/animation-list/: AnimationList.tsx  AnimationListItem.tsx
src/components/layout/: AppLayout.tsx  Toolbar.tsx
src/components/modals/: BrokenReferencesModal.tsx
src/components/preview/: PlaybackControls.tsx  SpritePreview.tsx
src/components/properties/: AnchorsSection.tsx  EventKeyProperties.tsx  PropertiesPanel.tsx  SpriteKeyProperties.tsx  TweenKeyProperties.tsx
src/components/spritesheet/: SpritesheetList.tsx  SpritesheetListItem.tsx  SpritesheetModal.tsx  index.ts
src/components/timeline/: Playhead.tsx  SpritePickerModal.tsx  Timeline.tsx  TimelineHeader.tsx  TimelineKey.tsx  TimelineTrack.tsx
src/components/ui/: CoordinateInput.tsx  DragNumberInput.tsx
src/context/: AnimatorContext.tsx  UndoRedoContext.tsx
src/hooks/: useCanvasZoomPan.ts  useUndoableReducer.ts
src/services/: fileService.ts  imageService.ts
src/test/: setup.ts
src/types/: animation.test.ts  animation.ts  editor.ts  index.ts  tracks.test.ts  tracks.ts
src/utils/: id.test.ts  id.ts  keyboardUtils.ts  timelineUtils.test.ts  timelineUtils.ts  updater.ts
