[package]
name = "lostanimator"
version = "0.3.0"
description = "A sprite animation editor for game development"
authors = ["Richard Strømland Egeli"]
license = "Custom"
repository = "https://github.com/LostSuite/LostAnimator"
edition = "2021"

[lib]
name = "lostanimator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
